@@ -24,6 +24,8 @@ CLI Changes
 -----------
  * New 'gtalk show settings' command showing the current settings loaded from
    gtalk.conf.
+ * The 'logger reload' command now supports an optional argument, specifying an
+   alternate configuration file to use.
 
 ------------------------------------------------------------------------------
 --- Functionality changes from Asterisk 1.6.2 to Asterisk 1.8 ----------------
